...
                                    color: "#1b1f1f",
                                    fontWeight: "800",
                                    fontSize: 16,
                                    textAlign: "center"
                                }}
                            >
                                Rakenda
                            </Text>
                        </TouchableOpacity>
                        <TouchableOpacity
                            style={{
                                backgroundColor: "#102020",
                                width: "50%",
...
                                    color: "#b4cecc",
                                    fontWeight: "800",
                                    fontSize: 15,
                                    textAlign: "center"
                                }}
                            >
                                Tühjenda valikud
                            </Text>
                        </TouchableOpacity>
                    </View>
                </>
            }
        </SafeAreaView>
...
