...
              style={[
                indexStyles.exploreButton,
                indexStyles.skipButton,
                { bottom: Math.max(height * 0.16, insets.bottom + 16) },
              ]}
            >
              <Text style={indexStyles.exploreButtonText}>Jäta vahele</Text>
            </TouchableOpacity>
          </View>

          {/* Page 2 */}
          <View style={[indexStyles.pageBase, indexStyles.page2]}>
            <Text style={[indexStyles.titleText, indexStyles.titleTextSecond]}>
...
