...
                                            onHandlerStateChange={onDoubleTap}
                                        >
                                            <TapGestureHandler
                                                ref={singleTapRef}
                                                waitFor={[doubleTapRef, pinchRef, panRef, rotateRef]}
                                                onHandlerStateChange={onSingleTap}
                                                testID="coin-tap"
                                            >
                                                <Animated.View
                                                    pointerEvents="box-none"
                                                    style={[
                                                        styles.coinLayer,
                                                        isInfoVisible && styles.coinLayerRaised,
...
