...
        <View style={styles.container} {...screenSwipe.panHandlers}>
            {/* Screen title*/}
            <View
                pointerEvents="box-none"
                style={[styles.walletTitleArea, { top: insets.top + 20 }]}
            >
                <Text style={styles.walletTitle}>Minu Rahakott</Text>
            </View>

            {/* If wallet is empty, show prompt */}
            {coins.length === 0 ? (
                <View style={styles.walletEmptyState}>
                    <Text style={styles.walletEmptyText}>Rahakott on tühi</Text>
                    <Text style={styles.walletEmptySubtext}>
                        Viska münte, et neid lisada rahakotti!
                    </Text>
                </View>
            ) : (
                // If coin exists, show draggable coin centered
...
