...
                                : "Ennustus ei läinud täppi."}
                        </Text>
                    )}

                    {justAddedToWallet && (
                        <Text style={styles.predictionResultText}>
                            Münt on lisatud rahakotti
                        </Text>
                    )}
                </View>
            )}
        </View>
    );
...
